# goth-saathi

./: README.md  vercel.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py  notifications_util.py  schemas.py  seed.py
backend/app/ data/: sindh_villages.json
backend/app/routers/: analytics.py  announcements.py  auth.py  complaints.py  notifications.py  users.py
frontend/: package-lock.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/announcements/: page.tsx
frontend/src/app/admin/complaints/: page.tsx
frontend/src/app/admin/complaints/[id]/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/citizen/: layout.tsx  page.tsx
frontend/src/app/citizen/announcements/: page.tsx
frontend/src/app/citizen/complaints/: page.tsx
frontend/src/app/citizen/complaints/[id]/: page.tsx
frontend/src/app/citizen/complaints/new/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/officer/: layout.tsx  page.tsx
frontend/src/app/officer/complaints/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Button.tsx  ComplaintTimeline.tsx  Navbar.tsx  RoleGuard.tsx  StatusBadge.tsx  ui.tsx
frontend/src/lib/: api.ts  auth-context.tsx  sindh-locations.ts  types.ts
