[project]
name = "goth-saathi-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic[email]==2.9.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "bcrypt==4.0.1",
    "psycopg2-binary==2.9.9",
]

[tool.vercel]
entrypoint = "app.main:app"
